core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select_aggregate__single_measurement__aggregate_non_existent_field.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT MEAN(f64_field) + MEAN(non_existent) FROM data\")"
snapshot_kind: text
---
Sort: time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), mean_mean:Null;N]
  Projection: Dictionary(Int32, Utf8("data")) AS iox::measurement, TimestampNanosecond(0, None) AS time, NULL AS mean_mean [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), mean_mean:Null;N]
    EmptyRelation: rows=1 []
