core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select_aggregate__single_measurement__fill_clause_variations.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT MEAN(f64_field), SUM(i64_field), COUNT(str_field) FROM data WHERE time >= '2022-10-31T02:00:00Z' AND time < '2022-10-31T02:02:00Z' GROUP BY TIME(10s) FILL(0)\")"
---
Sort: time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None);N, mean:Float64;N, sum:Int64;N, count:Int64;N]
  Projection: Dictionary(Int32, Utf8("data")) AS iox::measurement, time, mean, sum, count [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None);N, mean:Float64;N, sum:Int64;N, count:Int64;N]
    SeriesLimit: series=[], order=[time ASC NULLS LAST], limit_expr=[mean RESPECT NULLS (default: Float64(0)), sum RESPECT NULLS (default: Int64(0)), count RESPECT NULLS (default: Int64(0))] [time:Timestamp(Nanosecond, None);N, mean:Float64;N, sum:Int64;N, count:Int64;N]
      Projection: time, coalesce_struct(avg(data.f64_field), Float64(0)) AS mean, coalesce_struct(sum(data.i64_field), Int64(0)) AS sum, coalesce_struct(count(data.str_field), Int64(0)) AS count [time:Timestamp(Nanosecond, None);N, mean:Float64;N, sum:Int64;N, count:Int64;N]
        GapFill: series=[], time=date_bin_wallclock(IntervalMonthDayNano("IntervalMonthDayNano { months: 0, days: 0, nanoseconds: 10000000000 }"), time, TimestampNanosecond(0, None)), fill=[COALESCE(avg(data.f64_field), 0), COALESCE(sum(data.i64_field), 0), COALESCE(count(data.str_field), 0)], range=Included(Literal(TimestampNanosecond(1667181600000000000, None), None))..Included(Literal(TimestampNanosecond(1667181719999999999, None), None)) [time:Timestamp(Nanosecond, None);N, avg(data.f64_field):Float64;N, sum(data.i64_field):Int64;N, count(data.str_field):Int64]
          Aggregate: groupBy=[[date_bin_wallclock(IntervalMonthDayNano("IntervalMonthDayNano { months: 0, days: 0, nanoseconds: 10000000000 }"), data.time, TimestampNanosecond(0, None)) AS time]], aggr=[[avg(data.f64_field), sum(data.i64_field), count(data.str_field)]] [time:Timestamp(Nanosecond, None);N, avg(data.f64_field):Float64;N, sum(data.i64_field):Int64;N, count(data.str_field):Int64]
            Filter: data.time >= TimestampNanosecond(1667181600000000000, None) AND data.time <= TimestampNanosecond(1667181719999999999, None) [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
              Filter: data.f64_field IS NOT NULL OR data.i64_field IS NOT NULL OR data.str_field IS NOT NULL [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
                TableScan: data [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
