core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select_aggregate__single_measurement__group_by_non_reused_in_projection.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT count(f64_field),  count(f64_field) * 2 FROM data\")"
---
Sort: time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), count:Int64, count_1:Int64]
  Projection: Dictionary(Int32, Utf8("data")) AS iox::measurement, TimestampNanosecond(0, None) AS time, count(data.f64_field) AS count, count(data.f64_field) * Int64(2) AS count_1 [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), count:Int64, count_1:Int64]
    Filter: __aggr_count > Int64(0) [count(data.f64_field):Int64, __aggr_count:Int64]
      Aggregate: groupBy=[[]], aggr=[[count(data.f64_field), count(Int64(1)) AS __aggr_count]] [count(data.f64_field):Int64, __aggr_count:Int64]
        Filter: data.f64_field IS NOT NULL [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
          TableScan: data [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
